--- a/Kiwi/AndroidManifest.xml
+++ b/Kiwi/AndroidManifest.xml
@@ -14,5 +14,12 @@
 
     </application>
 
+<receiver android:name="KiwiWidgetProvider" >
+    <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+    </intent-filter>
+    <meta-data android:name="android.appwidget.provider"
+               android:resource="@xml/kiwi_appwidget_info" />
+</receiver>
 
 </manifest> 
