--- a/Kiwi/AndroidManifest.xml
+++ b/Kiwi/AndroidManifest.xml
@@ -25,4 +25,6 @@
 
 
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"></uses-sdk>
+
 </manifest> 
